--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,8 @@
   "browser_action": {
     "default_popup": "popup.html",
     "default_icon": "shortlr.png"
-  }
+  },
+  "permissions": [
+    "https://cb.lk/"
+  ]
 }
