--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,16 @@
 {
   "name": "shortlr",
-  "description" : "url shortening service ",
+  "description" : "it is an easy to use url shortening service",
   "version": "1.0",
   "manifest_version": 2,
+  "icons": {
+    "128": "logo128.png",
+    "64": "logo64.png",
+    "16": "logo16.png"
+  },
   "browser_action": {
     "default_popup": "popup.html",
-    "default_icon": "shortlr.png"
+    "default_icon": "logo16.png"
   },
   "permissions": [
     "https://cb.lk/"
